fix the scrollbar

--- a/styles/formulation.css
+++ b/styles/formulation.css
@@ -4,17 +4,20 @@
   padding-bottom: 10px;
 }
 
-.katex-display::-webkit-scrollbar {
-  width: 10px;
-  height: 5px;
-}
 .katex-display::-webkit-scrollbar-track {
-  border-radius: 3px;
-  background: rgba(207, 199, 199, 0.05);
-  -webkit-box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.08);
+  background-color: transparent;
+  border-radius: 9999px;
 }
+
 .katex-display::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: rgb(232, 229, 229);
-  -webkit-box-shadow: inset 0 0 50px rgba(169, 160, 160, 0.2);
+  --tw-border-opacity: 1;
+  background-color: rgba(217, 217, 227, 0.5);
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+  border-radius: 9999px;
+  border-width: 1px;
+}
+
+.katex-display::-webkit-scrollbar {
+  height: 0.4rem;
+  width: 0.5rem;
 }
