--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,29 +1,17 @@
-.flat-scrollbar::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-.flat-scrollbar::-webkit-scrollbar-track {
-  border-radius: 3px;
-  background: rgba(0, 0, 0, 0.06);
-  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
-}
-.flat-scrollbar::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: gray;
-  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+.flat-scrollbar-normal::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 9999px;
 }
 
-.flat-scrollbar-thin::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+.flat-scrollbar-normal::-webkit-scrollbar-thumb {
+  --tw-border-opacity: 1;
+  background-color: rgba(217, 217, 227, 0.5);
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+  border-radius: 9999px;
+  border-width: 1px;
 }
-.flat-scrollbar-thin::-webkit-scrollbar-track {
-  border-radius: 3px;
-  background: rgba(0, 0, 0, 0.06);
-  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
-}
-.flat-scrollbar-thin::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: gray;
-  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+
+.flat-scrollbar-normal::-webkit-scrollbar {
+  height: 0.5rem;
+  width: 0.5rem;
 }
